// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentityOverview should render a normal identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            KILT Identity 1
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/identity/NEW"
        title="Add Identity"
      />
      <a
        aria-label="KILT Identity 2"
        class="right"
        href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
        title="KILT Identity 2"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="KILT Identity 2"
            class="bubble"
            href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="amount"
      >
        1
        <span
          class="fractional"
        >
          .2340
        </span>
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
      <button
        aria-label="Show balance breakdown"
        class="showBreakdown"
        title="Show balance breakdown"
        type="button"
      />
    </p>
    <p>
      <button
        class="button"
        type="button"
      >
        Send
      </button>
      <a
        class="button"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/receive"
      >
        Receive
      </a>
    </p>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;

exports[`IdentityOverview should render the new identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/add"
          title="Add Identity"
        />
      </section>
      <a
        aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
        class="left"
        href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
        title="KILT Identity 3 which has a very long name and might not even fit on the screen"
      />
      <a
        aria-label="KILT Identity 1"
        class="right"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
        title="KILT Identity 1"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-label="KILT Identity 1"
            class="bubble"
            href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="KILT Identity 2"
            class="bubble"
            href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <a
      class="add"
      href="/identity/add"
    >
      Add Identity
    </a>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;

exports[`IdentityOverview should render upcoming feature modal 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            KILT Identity 1
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/identity/NEW"
        title="Add Identity"
      />
      <a
        aria-label="KILT Identity 2"
        class="right"
        href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
        title="KILT Identity 2"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="KILT Identity 2"
            class="bubble"
            href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="amount"
      >
        1
        <span
          class="fractional"
        >
          .2340
        </span>
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
      <button
        aria-label="Show balance breakdown"
        class="showBreakdown"
        title="Show balance breakdown"
        type="button"
      />
    </p>
    <p>
      <button
        class="button"
        type="button"
      >
        Send
      </button>
      <a
        class="button"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/receive"
      >
        Receive
      </a>
    </p>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
    <dialog
      class="container"
    >
      <p
        class="info"
      >
        It is not yet possible to transfer KILT Coins via the KILT blockchain. Please visit 
        <a
          href="https://sporran.org/"
          rel="noreferrer"
          target="_blank"
        >
          sporran.org
        </a>
         to check whether this functionality is live, then ensure your extension is up-to-date.
      </p>
      <button
        class="close"
        type="button"
      >
        Close
      </button>
    </dialog>
  </main>
</div>
`;

exports[`IdentityOverview should render with link to send screen 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            KILT Identity 1
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/identity/NEW"
        title="Add Identity"
      />
      <a
        aria-label="KILT Identity 2"
        class="right"
        href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
        title="KILT Identity 2"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="KILT Identity 2"
            class="bubble"
            href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="amount"
      >
        1
        <span
          class="fractional"
        >
          .2340
        </span>
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
      <button
        aria-label="Show balance breakdown"
        class="showBreakdown"
        title="Show balance breakdown"
        type="button"
      />
    </p>
    <p>
      <a
        class="button"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/send"
      >
        Send
      </a>
      <a
        class="button"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/receive"
      >
        Receive
      </a>
    </p>
    <a
      class="subscan"
      href="https://kilt-testnet.subscan.io/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire?tab=transfer"
      rel="noreferrer"
      target="_blank"
    >
      View Transactions
    </a>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;
